--- a/src/styles/Settings.css
+++ b/src/styles/Settings.css
@@ -1,5 +1,6 @@
-.settings-root{
+.settings-root{width:80%;
   padding:20px;
+  margin-left:20%;
   font-family:Inter,sans-serif;
   color:#0f1724;
 }
@@ -15,14 +16,15 @@
 }
 
 /* Form */
-.ann-form{ display:flex; flex-direction:column; gap:10px; margin-bottom:12px; }
+.ann-form{ display:flex; flex-direction:column;
+   gap:10px; margin-bottom:12px;width:50%; }
 .ann-form input, .ann-form textarea{ padding:8px; border-radius:8px; border:1px solid #e5e7eb; width:100%; }
 .ann-form button{ padding:8px; border-radius:8px; border:none; background:linear-gradient(90deg,#4c1d95,#8b5cf6); color:white; cursor:pointer; transition:0.2s; }
 .ann-form button:hover{ transform:scale(1.05); }
 
 /* Search */
 .ann-search{ margin-bottom:12px; }
-.ann-search input{ width:100%; padding:8px; border-radius:8px; border:1px solid #e5e7eb; }
+.ann-search input{ width:60%; padding:8px; border-radius:8px; border:1px solid #e5e7eb; }
 
 /* List */
 .ann-list{ display:flex; flex-direction:column; gap:10px; }
@@ -49,7 +51,7 @@
 }
 
 @media(max-width:1024px){
-  .ann-form{ margin-left:18%;
+  .ann-form{ margin-left:6%;
     width:80%; 
      
     gap:12px;}
@@ -62,7 +64,7 @@ margin-left:25%;
     } 
     .ann-search{
 margin-left:20%;
-    width:79%;
+    width:89%;
     gap:12px;
     }
     .ann-list{
